# eda_tool

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/cli/: main.cpp
src/coverage/: coverage.cpp  coverage.hpp
src/dpi/: dpi_shim.cpp  dpi_shim.hpp
src/frontend/: ast.cpp  ast.hpp  const_eval.hpp  elab.cpp  elab.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  symbol_table.cpp  symbol_table.hpp
src/ir/: ir_builder.cpp  ir_builder.hpp  rtl_ir.cpp  rtl_ir.hpp
src/sim/: kernel.cpp  kernel.hpp  process.cpp  process.hpp  value.cpp  value.hpp  vcd_writer.cpp  vcd_writer.hpp
src/sva/: sva_engine.cpp  sva_engine.hpp
src/synth/: netlist.cpp  netlist.hpp  synth_driver.cpp  synth_driver.hpp  techmap.cpp  techmap.hpp
src/uvm/: uvm_env.cpp  uvm_env.hpp
tests/: CMakeLists.txt
tests/coverage/unit/: test_coverage_basic.cpp
tests/dpi/unit/: test_dpi_basic.cpp
tests/frontend/negative/: test_frontend_negative.cpp
tests/frontend/regression/: test_frontend_regression.cpp
tests/frontend/unit/: test_frontend_basic.cpp  test_frontend_elab.cpp
tests/ir/negative/: test_ir_negative.cpp
tests/ir/regression/: test_ir_regression.cpp
tests/ir/unit/: test_ir_basic.cpp  test_ir_builder.cpp
tests/sim/regression/: test_sim_regression.cpp
tests/sim/unit/: test_sim_kernel_basic.cpp  test_sim_value.cpp
tests/sva/unit/: test_sva_basic.cpp
tests/synth/negative/: test_synth_negative.cpp
tests/synth/regression/: test_synth_regression.cpp
tests/synth/unit/: test_synth_basic.cpp
tests/uvm/unit/: test_uvm_smoke.cpp
verilog/: and_or_mux.v  dff.v  generate_for.v  hello.v  tiny_alu.v  top.v  top_with_child.v
